--- a/src/components/features/shop/Shop.scss
+++ b/src/components/features/shop/Shop.scss
@@ -1,29 +1,42 @@
 .shop {
 	width: 100%;
 	height: 100%;
-	
+
 	display: flex;
 }
 
 .shop-controls {
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	width: 100%;
-	align-items: left;
 	padding: 1rem;
+	overflow-y: auto;
 }
 
 .shop-data {
 	width: 100%;
 	height: 100%;
 	display: grid;
+	grid-template-rows: 90% 10%;
+	gap: 1rem;
+}
+
+.shop-cards {
+	display: grid;
 	gap: 0.5rem;
+	padding: 1rem;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 	overflow-y: scroll;
 }
 
-.search-input {
-	width: 5rem;
-	position: relative;
+.shop-pagination {
+	justify-self: center;
+}
+
+.control {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
