--- a/src/components/features/navigation/Navigation.scss
+++ b/src/components/features/navigation/Navigation.scss
@@ -1,6 +1,5 @@
 .navbar {
 	border-bottom: 1px solid rgb(179, 179, 179);
-	z-index: 9999;
 }
 
 .nav {
@@ -16,4 +15,10 @@
 	display: flex;
 	margin-left: auto;
 	margin-right: 0;
+}
+
+@media only screen and (max-width: 991px) {
+	.navbar {
+		z-index: 9999;
+	}
 }
