--- a/src/components/features/shop/Shop.scss
+++ b/src/components/features/shop/Shop.scss
@@ -15,11 +15,19 @@
 	overflow-y: auto;
 }
 
+.shop-controls-button {
+	width: fit-content;
+	height: fit-content;
+	margin-left: 1rem;
+	color: grey;
+	visibility: hidden;
+}
+
 .shop-data {
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-rows: 90% 10%;
+	grid-template-rows: 1fr 90% 8%;
 	gap: 1rem;
 }
 
@@ -39,4 +47,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
+}
+
+@media only screen and (max-width: 750px) {
+	.shop-controls-wrapper {
+		display: none;
+	}
+	.shop-controls-button {
+		visibility: visible;
+	}
 }
